--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <HEAD>
 <title>Launching EC2 instance using terraform</title>
 <body>bgcolor=Aqua>
-<img src="" width="300" height="500">
+<img src="https://shailja85.s3.ap-south-1.amazon.com/shailja.jpg" width="300" height="500">
 </body>
 </HEAD>
 </HTML>
