--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <HTML>
 <HEAD>
 <title>Launching EC2 instance using terraform</title>
-<body>bgcolor=Aqua>
+<body>bgcolor=Aqua
 <img src="https://shailja85.s3.ap-south-1.amazonaws.com/shailja.jpg" width="300" height="500">
 </body>
 </HEAD>
