--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>Launching EC2 instance using terraform</title>
 <body bgcolor=Aqua>
  HI!!!!!
-<img src="https://shailja85.s3.ap-south-1.amazonaws.com/shailja.jpg" width="1084" height="804">
+<img src="https://b.s3.ap-south-1.amazonaws.com/shailja.jpg" width="1084" height="804">
 </body>
 </HEAD>
 </HTML>
